fix space collapse

--- a/src/styles/About.sass
+++ b/src/styles/About.sass
@@ -14,15 +14,11 @@
 .Collapse-about
     display: flex
     flex-direction: column
-    margin: 38px 108px
+    margin: 38px auto
+    width: 100%
     .collapse-content
         margin-bottom: 25px
-
+    .collapse
+        margin-bottom: 40px
     @include respond-to(mobile)
         margin: 0
-
-// .collapse
-//     max-height: 50px
-//     &.open
-//         max-height: 500px
-
