--- a/src/styles/Collapse.sass
+++ b/src/styles/Collapse.sass
@@ -47,7 +47,7 @@
 
             &.rotate-down
                 transform: rotate(-180deg)
-
+  
     .collapse-content
         overflow: hidden
         transform-origin: top // origine de la transformation => sous le header
@@ -62,9 +62,7 @@
         line-height: 25px
 
         &.open
-            max-height: 1000px
+            max-height: 5000px
         
         @include respond-to(mobile)
             font-size: 13px
-    
-        
